new locations + logo changes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" href="logo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -26,7 +27,7 @@
       <h1 style="text-align:center" >Screenshots</h1>
       <h2 style="text-align:center">These are Screenshots that I took that I think are beautiful!</h2>
 	  <div>
-		<img class="center-fit" src="screenshot_1.jpg">
+		<img class="center-fit" src="Screenshots\screenshot_1.jpg">
 		<h2 style="text-align:center" >This One Is My favorite!</h2>
 	  </div>
     </div>
