fixed home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
   <div class="tab-content">
     <div id="home" data-tab-content class="active">
       <h1 style="text-align:center" >Home</h1>
-      <p>This is the home</p>
+      <h2 style="text-align:center" >This is the home</h2>
+	  <br>
+		<img class="centerImage" src="logo.png">
+	  <br>
+	  <br>
+	  <br>
+      <h2 style="text-align:center" >nothing much here</h2>
     </div>
     <div id="screenshots" data-tab-content>
       <h1 style="text-align:center" >Screenshots</h1>
@@ -33,7 +39,8 @@
     </div>
     <div id="about" data-tab-content>
       <h1 style="text-align:center" >About</h1>
-      <p>Let me tell you about me</p>
+      <h2 style="text-align:center" >This Page is just all about my ksp,</h2>
+      <h2 style="text-align:center" >like Screenshots, Mods, Ideas, Vessel Concepts, etc. </h2>
     </div>
   </div>
 </body>
