--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li data-tab-target="#home" class="active tab">Home</li>
     <li data-tab-target="#screenshots" class="tab">Screenshots</li>
     <li data-tab-target="#about" class="tab">About</li>
-    <li data-tab-target="#test" class="tab">test</li>
+    <li data-tab-target="#debug" class="tab">Debuging</li>
   </ul>
 
   <div class="tab-content">
@@ -33,7 +33,13 @@
       <h2 style="text-align:center">These are Screenshots that I took that I think are beautiful!</h2>
 	  <div>
 		<img class="center-fit" src="Screenshots\screenshot_1.jpg">
-		<h2 style="text-align:center" >This One Is My favorite!</h2>
+		<h2 style="text-align:center" >Accidentally Deorbit!</h2>
+		<h3 style="text-align:center" >This Station was meant to air drop package down to Kerbin, but on the first launch it didnt have enough fuel</h3>
+		
+		<img class="center-fit" src="Screenshots\screenshot_2.jpg">
+		<h2 style="text-align:center" >The Asteroid Extractor</h2>
+		<h3 style="text-align:center" >Small Station that would extract resources out of asteroids, then go into Kerbin orbit to drop off resources collected</h3>
+		
 	  </div>
     </div>
     <div id="about" data-tab-content>
@@ -41,6 +47,9 @@
       <h2 style="text-align:center" >This Page is just all about my ksp,</h2>
       <h2 style="text-align:center" >like Screenshots, Mods, Ideas, Vessel Concepts, etc. </h2>
     </div>
+	<div id="#debug" data-tab-content> 
+		
+	</div>
   </div>
 </body>
 </html>
