--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1 style="text-align:center" >Home</h1>
       <h2 style="text-align:center" >This is the home</h2>
 	  <br>
-		<img class="centerImage" src="logo.png">
+		<img class="center-corrected" src="logo.png">
 	  <br>
 	  <br>
 	  <br>
@@ -34,11 +34,11 @@
 	  <div>
 		<img class="center-fit" src="Screenshots\screenshot_1.jpg">
 		<h2 style="text-align:center" >Accidentally Deorbit!</h2>
-		<h3 style="text-align:center" >This Station was meant to air drop package down to Kerbin, but on the first launch it didnt have enough fuel</h3>
+		<h3 style="text-align:center" >This Station was meant to air drop package down to Kerbin, but on the first launch it didnt have enough fuel!</h3>
 		
 		<img class="center-fit" src="Screenshots\screenshot_2.jpg">
 		<h2 style="text-align:center" >The Asteroid Extractor</h2>
-		<h3 style="text-align:center" >Small Station that would extract resources out of asteroids, then go into Kerbin orbit to drop off resources collected</h3>
+		<h3 style="text-align:center" >Small Station that would extract resources out of asteroids, then go into Kerbin orbit to drop off resources collected.</h3>
 		
 	  </div>
     </div>
