--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li data-tab-target="#home" class="active tab">Home</li>
     <li data-tab-target="#screenshots" class="tab">Screenshots</li>
     <li data-tab-target="#about" class="tab">About</li>
-    <li data-tab-target="#test" class="tab">test</li>
+    <li data-tab-target="#test" class="tab">Wiki</li>
   </ul>
 
   <div class="tab-content">
