--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   
     <div id="home" data-tab-content class="active">
-      <h1 style="text-align:center" >Home</h1>
+      <h1 style="text-align:center" class="BorderRound"  >Home</h1>
       <h2 style="text-align:center" >This is the home</h2>
 	  <br>
 		<img class="center-corrected" src="logo.png">
@@ -41,12 +41,12 @@
       <h1 style="text-align:center" >Screenshots</h1>
       <h2 style="text-align:center">These are Screenshots that I took that I think are beautiful!</h2>
 	  <div>
-		<img class="center-fit" src="Screenshots\screenshot_1.jpg">
+		<img class="BorderRoundCenter" src="Screenshots\screenshot_1.jpg">
 		<h2 style="text-align:center" >Accidentally Deorbit!</h2>
 		<h3 style="text-align:center" >This Station was meant to air drop package down to Kerbin, but on the first launch it didnt have enough fuel!</h3>
 		<h3 style="text-align:center" >Vessel Name: O.P.D Station - Orbital Package Delivery Station </h2>
 		
-		<img class="center-fit" src="Screenshots\screenshot_2.jpg">
+		<img class="BorderRoundCenter" src="Screenshots\screenshot_2.jpg">
 		<h2 style="text-align:center" >Asteroid Extractor</h2>
 		<h3 style="text-align:center" >Small Station that would extract resources out of asteroids, then go into Kerbin orbit to drop off resources collected.</h3>
 		
@@ -64,10 +64,14 @@
 	<div id="videos" data-tab-content>
 		<h1 style="text-align:center" >Videos</h1>
 		<h2 style="text-align:center" >Videos I Recorded on KSP</h2>
-		<video class="center-fit" width="1920" height="1080" controls>
-		<source src="Videos\video_1.mp4" type="video/mp4">
+		
+		<div> 
+		  <video class="BorderRoundCenter" width="1920" height="1080" controls>
+		  <source  src="Videos\video_1.mp4" type="video/mp4">
 			Your browser does not support the video tag.
-		</video>
+		  </video>
+		</div>
+		
 		<h2 style="text-align:center" >The O.P.D Station entering orbit </h2>
 	</div>
 	
