--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <li data-tab-target="#home" class="active tab">Home</li>
     <li data-tab-target="#screenshots" class="tab">Screenshots</li>
 	<li data-tab-target="#videos" class="tab">Videos</li>
+	<li data-tab-target="#forms" class="tab">Evan Forms</li>
     <li data-tab-target="#about" class="tab">About</li>
     <li data-tab-target="#test" class="tab">Wiki</li>
   </ul>
@@ -53,6 +54,13 @@
 	  </div>
     </div>
 	
+	<div id="forms" data-tab-content>
+	  <h1 style="text-align:center" class="BorderRound"  >To Enter The Evan Forms Click The Button</h1>
+	  
+	  <br>
+	  <input class="BorderRoundCenter" type="button" id="" value="Submit" onclick="GotoForms();" />
+	  
+	</div>
 	
     <div id="about" data-tab-content>
       <h1 style="text-align:center" >About</h1>
