--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
       <h2 style="text-align:center" >This is the home</h2>
 	  <br>
 		<img class="center-corrected" src="logo.png">
+		<br>
+		<br>
+		<br>
+		  <video class="BorderRoundCenter" width="1920" height="1080" controls>
+		  <source  src="Videos\Sequence 01.mp4" type="video/mp4">
 	  <br>
 	  <br>
 	  <br>
-      <h2 style="text-align:center" >nothing much here</h2>
+      <h2 style="text-align:center" class="BorderRound" >Station_Spotted.MP4</h2>
     </div>
 	
 	
