--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
     <div id="home" data-tab-content class="active">
       <h1 style="text-align:center" class="BorderRound"  >OLD WEBSITE</h1>
-      <h1 style="text-align:center" class="BorderRound"  >this is the old website url new one</h1><><a href="https://evan-debug.github.io/Evan_Ksp_World_v2/">New Link</a>
+      <h1 style="text-align:center" class="BorderRound"  >this is the old website url new one</h1><a href="https://evan-debug.github.io/Evan_Ksp_World_v2/" style="text-align:center" class="BorderRound">New Link</a>
       <h2 style="text-align:center" >This is the home</h2>
 	  <br>
 		<img class="center-corrected" src="logo.png">
